crates/test-ui/ui/available_unknown_os.stderr
error[E0560]: struct `objc2::__macros::AvailableVersion` has no field named `unknown`
 --> ui/available_unknown_os.rs
  |
  |     available!(unknown = 1.2);
  |                ^^^^^^^ `objc2::__macros::AvailableVersion` does not have this field
  |
  = note: all struct fields are already assigned
